Change package.jason for git deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zobedadewan.github.io/covid-19-tracker",
+  "homepage": "https://zobedadewan.github.io/covid-19-tracker",
   "name": "covid-19-tracker",
   "version": "0.1.0",
   "private": true,
@@ -14,12 +14,13 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
